--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 
 
-@import url('https://fonts.googleapis.com/css2?family=Gayathri:wght@400;700&family=Noto+Sans+SC:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+SC&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -8,5 +8,5 @@
 :root {
   background-color: #658C6F;
   color: #FBFBFB;
-  font-family: 'Noto Sans SC', sans-serif;
+  font-family: 'Noto Serif SC', serif;
 }
